[package]
name = "wtdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Client
ureq = { version = "2.5.0", features = ["json"] }
# Server
actix-web = "4"
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1"
futures = "0.3"
